REGRESSION (r249855): Remove debug logging from WebCore::RenderImage::paintIntoRect() <https://webkit.org/b/202103>

Reviewed by Zalan Bujtas.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintIntoRect): Remove debug logging
statements.


Canonical link: https://commits.webkit.org/215708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250238 268f45cc-cd09-0410-ab3c-d52691b4dbfc